# tree-sitter-lua

./: .eslintrc.js  .tsqueryrc.json  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  publish.yml  release.yml
bindings/c/: tree-sitter-lua.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lua/: __init__.py  __init__.pyi  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/: lua.h
queries/: highlights.scm  injections.scm  locals.scm  tags.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: chunk.txt  comments.txt  expressions.txt  playdate.txt  statements.txt
test/highlight/: identifier.lua
